tests/requests/snapshots/can_get_current_user@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"pid\":\"PID\",\"name\":\"loco\",\"email\":\"test@loco.com\",\"mcp_token\":\"lo-PID\"}",
)
